<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.HomeActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/home_padding"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_service"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/home_card_margin_top">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/home_padding">
            <ImageView
                android:id="@+id/img_sale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_sale"/>
            <ImageView
                android:id="@+id/img_sale_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:src="@drawable/ic_chevron_right" />

            <TextView
                android:id="@+id/tv_sale_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/img_sale"
                android:layout_toStartOf="@id/img_sale_next"
                android:layout_marginTop="@dimen/home_margin"
                android:textStyle="bold"
                android:text="@string/tv_sale"/>
            <TextView
                android:id="@+id/tv_sale_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/img_sale"
                android:layout_toStartOf="@id/img_sale_next"
                android:layout_below="@id/tv_sale_title"
                android:textSize="@dimen/text_size_content"
                android:text="@string/tv_sale"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/home_margin"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/home_margin_left"
                android:layout_marginBottom="@dimen/home_margin"
                android:textStyle="bold"
                android:text="@string/tv_keywords"/>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/rc_keywords"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layoutManager="android.support.v7.widget.LinearLayoutManager"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/home_card_margin_top">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/home_padding">
            <TextView
                android:id="@+id/tv_login_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/tv_login_info"/>
            <ImageView
                android:id="@+id/img_shopping"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_shopping"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/tv_login_info"
                android:layout_alignBottom="@+id/img_shopping"
                android:layout_toStartOf="@id/img_shopping"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/color_bg_sign_up"
                    android:text="@string/btn_sign_up" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/home_margin_left"
                    android:background="@color/color_bg_sign_in"
                    android:text="@string/btn_sign_in" />
            </LinearLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/home_card_margin_top">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/home_padding"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/tv_tiki_deal"/>
            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </GridLayout>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_deal_more"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>